--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="checkoutLayout">
         <div class="returnCart">
-            <a href="home.html">Keep shopping</a>
+            <a href="../home/home.html">Keep shopping</a>
             <h1>List Product in Cart</h1>
             <div class="list"></div>
         </div>
